Implement API for PRODUCT - post/put/get/delete
